# ee360p-multiple-core-computing

./: .gitignore  Fall16-Option3-Multicore-ClassPresentations.docx  opt3-multicore-plan.txt
final/: ReadMe.md
final/research/: Book1.xlsx  ~$Book1.xlsx
final/src/cuda/: CMakeLists.txt  CTMatrix.cpp  CTMatrix.h  PPMWriter.cpp  PPMWriter.h  SART.cpp  SART.h  SIRT.cpp  SIRT.h  SIRT_cuda.cu  main.cpp
hw1/src/Q1/: PSort.java  SimpleTest.java
hw1/src/Q2/: PSearch.java  SimpleTest.java
hw1/src/Q2_change/: PSearch.java  SimpleTest.java
hw2/BathroomProtocol/src/: LockBathroomProtocol.java  SimpleTest.java  SyncBathroomProtocol.java
hw2/CyclicBarrier/src/: SimpleTest.java
hw2/sampleTest/: Bridge.java  FifoLock.java  Latch.java  MyLock.java  PLock.java
hw2/src/: BathroomProtocol.java  Caller.java  CyclicBarrier.java  FemaleProtocol.java  LockBathroomProtocol.java  MaleProtocol.java  SyncBathroomProtocol.java  Test.java  TestBathroomProtocol.java
hw2/src/q1/: CyclicBarrier.java  TestBarrier.java
hw2/src/q2/: LockBathroomProtocol.java  TestBathroomProtocol.java
hw2/src/src/: CyclicBarrier.java  SimpleTest.java
hw3/andy/q2/: CoarseConcurrentLinkedList  MainForCoarseImpl
hw3/andy/q3/: LockBaseQueue  LockFreeQueue  MainForLockBaseQueue  MainForLockFreeQueue
hw3/guillermo/q1/: Parallel Matrix Multiplication.docx  matrix_mult.c  matrix_mult.csv  monte_carlo_pi.c
hw3/guillermo/q2/: CoarseGrainedListSet.java  CoarsedLinkedList.java  FineLinkedList.java  (+5 more)
rust-matrix-mult/: Cargo.toml  matrix1.in  matrix2.in
rust-matrix-mult/src/: main.rs  matrix_generator.rs
(+143 files in other folders)
